# pytest-applause-reporter

./: .gitignore  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: pr.yml
src/applause/pytest_applause_reporter/: __init__.py
tests/: test_pytest_reporter.py
