[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-applause-reporter"
description = "A pytest plugin for reporting test case results to the Applause Services"
readme = "README.md"
version = "1.0.0"
authors = ["Applause"]
homepage = "https://github.com/ApplauseOSS/pytest-applause-reporter"
license = "LICENSE"
packages = [ { include = "applause", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8.0"
pytest = "^8.3.2"
applause-common-reporter = {git = "https://github.com/ApplauseOSS/common-python-reporter", rev = "dev"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
tox = "^4.18.0"
responses = "^0.25.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
